# idjc

./: readme.md
src/: ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  bootstrap  config.h.in  configure  configure.ac  idjc.desktop.in.in  idjc.in.in  py-compile
src/artwork/: Makefile.am  Makefile.in
src/artwork/darktheme/: Makefile.am  Makefile.in
src/artwork/lighttheme/: Makefile.am  Makefile.in
src/c/: Makefile.am  Makefile.in  audio_feed.c  audio_feed.h  avcodecdecode.c  avcodecdecode.h  dyn_mpg123.c  encoder.c  encoder.h  flacdecode.c  live_aac_encoder.c  live_aac_encoder.h  live_webm_encoder.c  main.c  mic.c  mic.h  mixer.c  mp3dec.h  mpg123.h  ogg_flac_dec.c  ogg_vorbis_dec.c  oggdec.c  recorder.c  recorder.h  sourceclient.c  sourceclient.h  streamer.c  vorbistagparse.c  xlplayer.c
src/doc/: Makefile.am  Makefile.in  code.html  code_idjcmon.html  contact.html  index.html  install.html  install_build.html  install_first_run.html  install_standard.html  tour.html  tour_effects.html  tour_jingles.html  tour_main.html  tour_output.html  tour_preferences.html  tutorials.html  tutorials_icecast.html  tutorials_jack_ports_demystified.html  tutorials_shoutcast.html  tutorials_streaming_aac.html  tutorials_voip.html
src/man/: Makefile.in
src/po/: Makevars  POTFILES.in  es.gmo  es.po  fr.gmo  fr.po  idjc.pot  it.gmo  it.po
src/python/: Makefile.am  Makefile.in  __init__.py.in.in  background.py  dialogs.py  effects.py  format.py  gtkstuff.py  idjcmonitor.py  irc.py  jingles.py  licence_window.py  maingui.py  midicontrols.py  mutagentagger.py  (+7 more)
(+4 files in other folders)
